--- a/assets/css/photos-single.css
+++ b/assets/css/photos-single.css
@@ -4,8 +4,8 @@ main#content {
 
 main#content .photo-frame {
   display: flex;
-  max-height: calc(100vh - 180px);
-  margin-top: 0;
+  max-height: calc(100vh - 18rem);
+  margin-top: 0.5rem;
 }
 
 main#content article img {
